// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid file type alert alert is closed after 3000ms 1`] = `
<DocumentFragment>
  <div
    class="kogito--alert-container"
  >
    <div
      aria-label="Danger Alert"
      class="pf-c-alert pf-m-danger"
      data-ouia-component-id="OUIA-Generated-Alert-danger-1"
      data-ouia-component-type="PF4/Alert"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-alert__icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
      <h4
        class="pf-c-alert__title"
      >
        <span
          class="pf-u-screen-reader"
        >
          Danger alert:
        </span>
        This file extension is not supported.
      </h4>
      <div
        class="pf-c-alert__action"
      >
        <button
          aria-disabled="false"
          aria-label="Close Danger alert: alert: This file extension is not supported."
          class="pf-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="pf-c-page kogito--editor-landing"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-toggle"
        >
          <button
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Global navigation"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            id="nav-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="pf-c-page__header-brand-link"
        >
          <img
            alt="Business Modeler Logo"
            class="pf-c-brand"
            src="images/BusinessModeler_Logo.svg"
          />
        </a>
      </div>
    </header>
    <div
      class="pf-c-page__sidebar pf-m-collapsed"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Global"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-1"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                aria-current="page"
                class="pf-c-nav__link pf-m-current"
              >
                Files
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
              >
                Learn more
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <section
        class="pf-c-page__main-section"
      >
        <div
          class="kogito--desktop__actions-title"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class="pf-c-title pf-m-2xl"
            >
              Create new file
            </h1>
          </div>
        </div>
        <div
          class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
        >
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-1"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Blank Workflow (.BPMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-2"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Blank Decision Model (.DMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-3"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Sample Workflow (.BPMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/sample_file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-4"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Sample Decision Model (.DMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/sample_file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card kogito--desktop__actions-card--wide"
            data-ouia-component-id="OUIA-Generated-Card-5"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl"
              >
                Open from source
              </h3>
            </div>
            <div
              class="pf-c-card__body"
            >
              <div
                class="pf-c-content"
              >
                <p
                  class=""
                  data-pf-content="true"
                >
                  Paste a URL to a source code link (GitHub, Dropbox, etc.)
                </p>
                <form
                  class="pf-c-form"
                  novalidate=""
                >
                  <div
                    class="pf-c-form__group"
                  >
                    <div
                      class="pf-c-form__group-label"
                    >
                      <label
                        class="pf-c-form__label"
                        for="url-text-input"
                      >
                        <span
                          class="pf-c-form__label-text"
                        >
                          URL
                        </span>
                      </label>
                       
                    </div>
                    <div
                      class="pf-c-form__group-control"
                    >
                      <input
                        aria-describedby="url-text-input-helper"
                        aria-invalid="false"
                        class="pf-c-form-control"
                        id="url-text-input"
                        name="urlText"
                        placeholder="URL"
                        required=""
                        type="url"
                        value=""
                      />
                    </div>
                  </div>
                </form>
              </div>
            </div>
            <div
              class="pf-c-card__footer"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Open from source
              </button>
            </div>
          </article>
        </div>
      </section>
      <section
        class="pf-c-page__main-section pf-m-light"
      >
        <h3
          class="pf-c-title pf-m-2xl"
        >
          Recent Files
        </h3>
        <div
          class="pf-c-toolbar"
          id="pf-random-id-0"
        >
          <div
            class="pf-c-toolbar__content"
          >
            <div
              class="pf-c-toolbar__content-section"
            >
              <div
                class="pf-c-toolbar__item"
              >
                <div
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-single-1"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 7em;"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby=" pf-select-toggle-id-4"
                    class="pf-c-select__toggle"
                    id="pf-select-toggle-id-4"
                    type="button"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <span
                        class="pf-c-select__toggle-text"
                      >
                        All
                      </span>
                    </div>
                    <span
                      class="pf-c-select__toggle-arrow"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="pf-c-toolbar__item"
              >
                <div
                  class="pf-c-input-group"
                >
                  <input
                    aria-invalid="false"
                    aria-label="search input example"
                    class="pf-c-form-control"
                    id="searchInput"
                    name="searchInput"
                    placeholder="Search"
                    type="search"
                    value=""
                  />
                </div>
              </div>
              <div
                class="pf-c-toolbar__item"
              >
                <button
                  aria-disabled="false"
                  aria-label="sort file view"
                  class="pf-c-button pf-m-plain kogito--filter-btn"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="orderAlphabeticallyButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 448 512"
                    width="1em"
                  >
                    <path
                      d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="pf-c-toolbar__expandable-content"
              id="pf-random-id-0-expandable-content-2"
            >
              <div
                class="pf-c-toolbar__group"
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__content pf-m-hidden"
            hidden=""
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
      </section>
      <section
        class="pf-c-page__main-section pf-m-fill"
      >
        <div
          class="pf-l-bullseye"
        >
          No files were opened yet.
        </div>
      </section>
    </main>
  </div>
</DocumentFragment>
`;

exports[`invalid file type alert alert is closed immediately after leaving the home page 1`] = `
<DocumentFragment>
  <div
    class="kogito--alert-container"
  >
    <div
      aria-label="Danger Alert"
      class="pf-c-alert pf-m-danger"
      data-ouia-component-id="OUIA-Generated-Alert-danger-2"
      data-ouia-component-type="PF4/Alert"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-alert__icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
      <h4
        class="pf-c-alert__title"
      >
        <span
          class="pf-u-screen-reader"
        >
          Danger alert:
        </span>
        This file extension is not supported.
      </h4>
      <div
        class="pf-c-alert__action"
      >
        <button
          aria-disabled="false"
          aria-label="Close Danger alert: alert: This file extension is not supported."
          class="pf-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-6"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="pf-c-page kogito--editor-landing"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-toggle"
        >
          <button
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Global navigation"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            id="nav-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="pf-c-page__header-brand-link"
        >
          <img
            alt="Business Modeler Logo"
            class="pf-c-brand"
            src="images/BusinessModeler_Logo.svg"
          />
        </a>
      </div>
    </header>
    <div
      class="pf-c-page__sidebar pf-m-collapsed"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Global"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-2"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                aria-current="page"
                class="pf-c-nav__link pf-m-current"
              >
                Files
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
              >
                Learn more
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <section
        class="pf-c-page__main-section"
      >
        <div
          class="kogito--desktop__actions-title"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class="pf-c-title pf-m-2xl"
            >
              Create new file
            </h1>
          </div>
        </div>
        <div
          class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
        >
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-6"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Blank Workflow (.BPMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-7"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Blank Decision Model (.DMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-8"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Sample Workflow (.BPMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/sample_file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card pf-m-compact kogito--desktop__actions-card"
            data-ouia-component-id="OUIA-Generated-Card-9"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl pf-u-mb-md"
              >
                Sample Decision Model (.DMN)
              </h3>
            </div>
            <div
              class="pf-c-card__body kogito--desktop__actions-card-body"
            >
              <img
                alt="file icon"
                class="kogito--desktop__actions-img"
                src="images/sample_file_icon_regular.svg"
              />
            </div>
          </article>
          <article
            class="pf-c-card kogito--desktop__actions-card--wide"
            data-ouia-component-id="OUIA-Generated-Card-10"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__header"
            >
              <h3
                class="pf-c-title pf-m-xl"
              >
                Open from source
              </h3>
            </div>
            <div
              class="pf-c-card__body"
            >
              <div
                class="pf-c-content"
              >
                <p
                  class=""
                  data-pf-content="true"
                >
                  Paste a URL to a source code link (GitHub, Dropbox, etc.)
                </p>
                <form
                  class="pf-c-form"
                  novalidate=""
                >
                  <div
                    class="pf-c-form__group"
                  >
                    <div
                      class="pf-c-form__group-label"
                    >
                      <label
                        class="pf-c-form__label"
                        for="url-text-input"
                      >
                        <span
                          class="pf-c-form__label-text"
                        >
                          URL
                        </span>
                      </label>
                       
                    </div>
                    <div
                      class="pf-c-form__group-control"
                    >
                      <input
                        aria-describedby="url-text-input-helper"
                        aria-invalid="false"
                        class="pf-c-form-control"
                        id="url-text-input"
                        name="urlText"
                        placeholder="URL"
                        required=""
                        type="url"
                        value=""
                      />
                    </div>
                  </div>
                </form>
              </div>
            </div>
            <div
              class="pf-c-card__footer"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Open from source
              </button>
            </div>
          </article>
        </div>
      </section>
      <section
        class="pf-c-page__main-section pf-m-light"
      >
        <h3
          class="pf-c-title pf-m-2xl"
        >
          Recent Files
        </h3>
        <div
          class="pf-c-toolbar"
          id="pf-random-id-2"
        >
          <div
            class="pf-c-toolbar__content"
          >
            <div
              class="pf-c-toolbar__content-section"
            >
              <div
                class="pf-c-toolbar__item"
              >
                <div
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-single-2"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 7em;"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby=" pf-select-toggle-id-11"
                    class="pf-c-select__toggle"
                    id="pf-select-toggle-id-11"
                    type="button"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <span
                        class="pf-c-select__toggle-text"
                      >
                        All
                      </span>
                    </div>
                    <span
                      class="pf-c-select__toggle-arrow"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="pf-c-toolbar__item"
              >
                <div
                  class="pf-c-input-group"
                >
                  <input
                    aria-invalid="false"
                    aria-label="search input example"
                    class="pf-c-form-control"
                    id="searchInput"
                    name="searchInput"
                    placeholder="Search"
                    type="search"
                    value=""
                  />
                </div>
              </div>
              <div
                class="pf-c-toolbar__item"
              >
                <button
                  aria-disabled="false"
                  aria-label="sort file view"
                  class="pf-c-button pf-m-plain kogito--filter-btn"
                  data-ouia-component-id="OUIA-Generated-Button-plain-5"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="orderAlphabeticallyButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 448 512"
                    width="1em"
                  >
                    <path
                      d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="pf-c-toolbar__expandable-content"
              id="pf-random-id-2-expandable-content-6"
            >
              <div
                class="pf-c-toolbar__group"
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__content pf-m-hidden"
            hidden=""
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
      </section>
      <section
        class="pf-c-page__main-section pf-m-fill"
      >
        <div
          class="pf-l-bullseye"
        >
          No files were opened yet.
        </div>
      </section>
    </main>
  </div>
</DocumentFragment>
`;

exports[`invalid file type alert alert is closed immediately after leaving the home page 2`] = `
<DocumentFragment>
  <div
    class="pf-c-page kogito--editor-page"
  >
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <section
        class="pf-c-page__main-section pf-m-no-padding pf-m-dark-200"
        style="flex-basis: 100%;"
      >
        <div
          class="pf-l-stack"
        >
          <div
            class="pf-l-stack__item"
          >
            <header
              class="pf-c-page__header kogito--editor__toolbar"
            >
              <div
                class="pf-c-page__header-brand"
              >
                <a
                  class="pf-c-page__header-brand-link"
                >
                  <img
                    alt="dmn kogito logo"
                    class="pf-c-brand"
                    src="images/dmn_kogito_logo.svg"
                  />
                </a>
              </div>
              <div
                class="pf-c-page__header-nav"
              >
                <div
                  class="kogito--editor__toolbar-title"
                  data-testid="toolbar-title"
                >
                  <h3
                    aria-describedby="pf-tooltip-2"
                    class="pf-c-title pf-m-xl"
                  >
                    a.dmn
                  </h3>
                </div>
              </div>
              <div
                class="pf-c-page__header-tools"
              >
                <div
                  class="pf-c-page__header-tools-group"
                >
                  <div
                    class="pf-c-page__header-tools-item"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Save file"
                      class="pf-c-button pf-m-tertiary pf-u-display-flex-on-lg"
                      data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      data-testid="save-button"
                      type="button"
                    >
                      Save
                    </button>
                  </div>
                  <div
                    class="pf-c-page__header-tools-item"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Go to homepage"
                      class="pf-c-button pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Button-plain-7"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      data-testid="close-editor-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 730 1024"
                        width="1em"
                      >
                        <path
                          d="M725.499315,767.757345 L469.242169,511.500499 L725.499315,255.243653 C729.196254,251.545719 731.096195,247.248119 731,242.4498 C731,237.653479 728.997365,233.35588 725.299427,229.558002 L647.542773,151.701495 C643.743891,147.903617 639.446287,146 634.64996,146 C629.852635,146 625.55503,147.803673 621.857092,151.500607 L365.5,407.857398 L109.241857,151.500607 C105.544917,147.803673 101.246314,145.904733 96.4499876,146 C91.6526619,146.104622 87.3550577,148.002562 83.5571748,151.701495 L5.7005771,229.457058 C1.90269428,233.255936 0,237.553535 0,242.350855 C0,247.148175 1.80175055,251.444775 5.50068853,255.143709 L261.857779,511.500499 L5.50068853,767.757345 C1.80175055,771.454279 -0.0961914123,775.752878 0,779.750645 C0.103697157,784.547965 2.00263857,788.845564 5.7005771,792.642443 L83.4572306,871.299502 C87.2541139,875.096381 91.5527176,877 96.3500433,877 C101.147369,877 105.444973,875.197325 109.142912,871.499391 L365.400058,615.241545 L621.657203,871.499391 C625.355142,875.197325 629.652746,877.095265 634.449072,877 C639.246398,877 643.545002,874.997437 647.342885,871.299502 L725.099538,793.54294 C728.896421,789.745062 730.796362,785.446463 730.796362,780.649143 C731.096195,775.752878 729.196254,771.454279 725.499315,767.757345"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </header>
          </div>
          <div
            class="pf-l-stack__item pf-m-fill"
          >
            <iframe
              data-envelope-channel="DESKTOP"
              data-testid="kogito-iframe"
              id="kogito-iframe"
              src="envelope/envelope.html"
              style="display: flex; flex: 1; flex-direction: column; width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden;"
              title="Kogito editor"
            />
          </div>
        </div>
        <textarea
          style="opacity: 0; width: 0px; height: 0px;"
        />
      </section>
    </main>
  </div>
</DocumentFragment>
`;
